--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,4 @@ test:
 #
 production:
   <<: *default
-  database: <%= ENV['DB_NAME'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+   url: <%= ENV['DATABASE_URL'] %>
